remart hw